# engines

./: .gitignore  CLAUDE.md  ENGINES.md  LICENSE.md  README.md  ZSCORE_AUDIT_MANIFOLD.md  pipeline.py  pyproject.toml  requirements.txt  run_all.py  server.py  test_results_2026_02_21.md  test_results_fd004.md
config/: __init__.py  config_manager.py  domain.yaml  engine.yaml  stride.yaml  window.yaml
config/defaults/: dynamics.yaml  geometry.yaml  pairwise.yaml  thresholds.yaml
config/domains/: academic.yaml  chemical_reactor.yaml  cmapss.yaml  financial.yaml  turbofan.yaml
config/environments/: development.yaml  production.yaml
docs/: PR-008-benchmark-validation.md  PRISM_VALIDATION_ROADMAP.md  PRISM_real_world_challenges.md  data_integrity.md  hydraulic_laplace_analysis.md  indicator_validation_query.md
docs/notebooks/: 01_fetch_findings.ipynb  cmapss_notebook.md  double_pendulum_notebook.md  lorenz_notebook.md  rossler_notebook.md
docs/notebooks/ml_accelerator/: CMAPSS_PRISM_Benchmark_Notebook.md
engines/: __init__.py  cli.py  input_loader.py
engines/entry_points/: run_pipeline.py  stage_00_breaks.py  stage_01_signal_vector.py  stage_02_state_vector.py  stage_03_state_geometry.py  stage_05_signal_geometry.py  stage_06_signal_pairwise.py  stage_07_geometry_dynamics.py  stage_08_ftle.py  stage_08_lyapunov.py  stage_09_dynamics.py  stage_10_information_flow.py  stage_13_statistics.py  stage_18_segment_comparison.py  stage_19_info_flow_delta.py  stage_20_geometry_full.py  stage_22_ftle_rolling.py  stage_24_gaussian_fingerprint.py
engines/manifold/: __init__.py  geometry_dynamics.py  registry.py  rolling.py  signal_geometry.py
engines/manifold/pairwise/: cointegration.py  copula.py
engines/manifold/parallel/: dynamics_runner.py  information_flow_runner.py
engines/manifold/signal/: frequency_bands.py  memory.py  spectral.py
engines/primitives/individual/: fractal.py
engines/server/: handler.py
engines/tests/: test_stage_01.py
examples/: demo_orthon.py  feature_engineering_demo.py
fetchers/: README.md
ignore for now/: ml_ablation.py  windowing.py
manifold/: run.py
manifold/core/: signal_geometry.py
manifold/core/dynamics/: __init__.py  persistent_homology.py
manifold/core/pairwise/: causality.py  copula.py
manifold/core/parallel/: dynamics_runner.py  information_flow_runner.py  topology_runner.py
manifold/core/signal/: __init__.py  adf_stat.py  attractor.py  basin.py  cycle_counting.py  dmd.py  garch.py  hmm.py  lof.py  memory.py  rate_of_change.py  snr.py  time_constant.py  trend.py  variance_growth.py  variance_ratio.py
manifold/features/: trajectory_features.py
manifold/io/: reader.py
manifold/primitives/: _config.py  config.py
manifold/validation/: input_validation.py
notebooks/: ORTHON_CHEATSHEET.md  orthon_complete_documentation.ipynb
orthon/: __init__.py  cli.py  pipeline.py
orthon-web/: index.html  server.py
orthon/_internal/: __init__.py
orthon/_internal/db/: query.py  (+7 more)
orthon/features/: __init__.py  rolling_features.py
prism/: PRISM_SCHEMA.yaml  README.md  __init__.py  cli.py  complexity.py  dynamics.py  information.py  memory.py  python_runner.py  runner.py  spectral.py  sql_runner.py  stationarity.py  statistics.py
prism/_legacy/: __init__.py
prism/accel/: pr_complete_migration.md  pr_ml_acceleration.md  pr_simplified_cli.md
prism/config/: __init__.py  dataset.py  loader.py  schema.py
prism/core/: domain_clock.py  loader.py
prism/db/: __init__.py  fetch.py  parquet_store.py  polars_io.py  query.py  scratch.py  streaming.py
prism/disciplines/: __init__.py  registry.py  requirements.py
prism/engines/: README.md  __init__.py  base.py  breaks.py  characterize.py  dynamics_runner.py  engine_base.py  engine_mapping.py  geometry_dynamics.py  information_flow_runner.py  registry.py  rolling.py  signal_geometry.py  signal_pairwise.py  state_geometry.py  state_vector.py  topology_runner.py
prism/entry_points/: README.md  __init__.py  analyze.py  api.py  causal_mechanics.py  cohort.py  compute.py  dynamical_systems.py  dynamics.py  fetch.py  fields.py  geometry.py  load.py  physics.py  run.py  run_pipeline.py  signal_typology.py  signal_vector.py  stage_00_breaks.py  stage_01_signal_vector.py  stage_02_state_vector.py  stage_05_breaks.py  stage_05_signal_geometry.py  stage_06_signal_pairwise.py  stage_07_geometry_dynamics.py  stage_08_ftle.py  stage_08_lyapunov.py  stage_09_dynamics.py  stage_10_information_flow.py  stage_10_pairwise.py  stage_11_topology.py  stage_12_zscore.py  stage_13_statistics.py  stage_14_correlation.py  stage_15_ftle_field.py  stage_16_break_sequence.py  stage_17_ftle_backward.py  stage_18_segment_comparison.py  stage_19_info_flow_delta.py  stage_20_geometry_full.py  (+10 more)
prism/modules/: __init__.py  derivatives.py  discovery.py  signal_behavior.py  state.py  typology_classifier.py
prism/queries/: social_systems.py
prism/scripts/: audit_classification.py
prism/server/: handler.py  routes.py
prism/sql/: orchestrator.py
prism/stream/: parser.py  writer.py
prism/typology/: __init__.py
prism/utils/: __init__.py  conditional.py  domain_loader.py  domains.py  memory.py
prism/validation/: __init__.py  input_validation.py  prerequisites.py
proof/: best_rul_model.py  fd002_regime_test.py  hurst_proof.tex  lstm_train.py  lstm_tune.py  lstm_tune_light.py  orthon_brand.html  proof.py  test_extended_windows.py  test_feature_pipeline_cmapss.py  test_stacking_ensemble.py  train_fd002.py
reports/: __init__.py  cohort_discovery_report.py  geometry_report.py  ml_acceleration_report.py  observations_report.py  report_utils.py  signal_vector_report.py  state_report.py
schema/: PR_canonical_schema.md  template.yaml  validate_schema.py
src/embedding/: delay.rs
src/individual/: mod.rs  spectral.rs
src/matrix/: decomposition.rs  graph.rs  mod.rs
src/pairwise/: causality.rs  correlation.rs  distance.rs  mod.rs
static/: index.html
tests/: __init__.py  test_breaks.py  test_primitives.py  test_trajectory_features.py
windowing/: PR_adaptive_windowing_fix.md  adaptive_windows.py
(+258 files in other folders)
