[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orthon"
version = "0.1.0"
description = "Behavioral geometry engine for industrial signal topology analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PRISM Diagnostics"}
]
keywords = [
    "signal-processing",
    "time-series",
    "behavioral-geometry",
    "industrial-diagnostics",
    "predictive-maintenance",
    "turbofan",
    "bearing-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Data processing (Polars + Parquet architecture)
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # Performance acceleration
    "numba>=0.58.0",
    "bottleneck>=1.3.0",
    "numexpr>=2.8.0",

    # Math/Scientific Engines
    "antropy>=0.1.6",
    "nolds>=0.5.2",
    "pyrqa>=8.0.0",
    "arch>=6.0.0",
    "PyWavelets>=1.4.0",
    "networkx>=3.0",

    # Statistics
    "statsmodels>=0.14.0",

    # Utilities
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "catboost>=1.2.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "build",
    "twine",
]
all = [
    "orthon[ml,dev]",
]

[project.urls]
Homepage = "https://github.com/prism-engines/diagnostics"
Documentation = "https://github.com/prism-engines/diagnostics"
Repository = "https://github.com/prism-engines/diagnostics"

[project.scripts]
orthon = "orthon.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["orthon", "orthon.*"]

[tool.setuptools.package-data]
"orthon._internal.config" = ["*.yaml"]
"*" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
